[Server] Rename operation functions with the expected API name
